methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:3: error: '<-' expected but ')' found.
    for(j -< 1 to 2){
                   ^MethodsDogHouse:7: error: illegal start of simple expression
  }
  ^